--- a/src/components/Page/Header/User.css
+++ b/src/components/Page/Header/User.css
@@ -8,10 +8,10 @@
     .UserMenu {
       position: absolute;
       top: 100%;
-      right: 0;
+      right: 5px;
       background: lightsteelblue;
       display: grid;
-      width: max-content;
+      min-width: 10vw;
       padding: 20px;
       gap: 10px;
       background: #636669;
@@ -29,8 +29,9 @@
         display: flex;
         align-items: center;
         flex-direction: row;
-        margin: 10px;
+        margin: 10px 40px;
         cursor: pointer;
+        font-size: 1.2em;
     }
 
     .UserMenuItem {
